--- a/src/Components/Layouts/Navbar/Navbar.css
+++ b/src/Components/Layouts/Navbar/Navbar.css
@@ -4,6 +4,7 @@
   top: 0;
   z-index: 1;
   padding: 1rem 0;
+  /* background-color: #333; */
 }
 
 .logo {
@@ -32,4 +33,16 @@
 
 .nav-links:hover {
   color: var(--primary-color);
+}
+
+.background-dark {
+  background-color: #333;
+}
+
+.background-transparent {
+  background-color: transparent;
+}
+
+.relative {
+  position: relative !important;
 }
