DetailsSections (Book_Details)

--- a/src/Components/Layouts/DetailSection/DetailSection.css
+++ b/src/Components/Layouts/DetailSection/DetailSection.css
@@ -40,7 +40,7 @@
   color: var(--primary-color-bright);
 }
 
-.cart-button {
+/* .cart-button {
   display: inline-block;
   padding: 1rem 2rem;
   background-color: var(--primary-color-bright);
@@ -53,4 +53,4 @@
 
 .cart-button:hover {
   background-color: #222;
-}
+} */
