--- a/src/Components/Layouts/Showcase/Showcase.css
+++ b/src/Components/Layouts/Showcase/Showcase.css
@@ -2,6 +2,8 @@
   height: 100vh;
   width: 100%;
   background-image: url("../../../assets/showcase-bg1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
   display: flex;
   justify-content: center;
