--- a/src/Components/Layouts/Navbar/Navbar.css
+++ b/src/Components/Layouts/Navbar/Navbar.css
@@ -23,15 +23,36 @@
   /* font-weight: 700; */
 }
 
-.nav-links {
+.nav-links-container {
+  display: flex;
+  align-items: center;
+}
+
+.cart-link {
+  display: inline-block;
+  padding-left: 20px;
+  cursor: pointer;
+}
+
+.nav-links,
+.nav-links-dark {
   color: #fff;
   text-decoration: none;
   font-size: 1.21rem;
   padding-left: 20px;
   transition: 0.2s ease-in;
+  cursor: pointer;
+}
+
+.nav-links-dark {
+  color: #333;
 }
 
 .nav-links:hover {
+  color: var(--primary-color);
+}
+
+.nav-links-dark:hover {
   color: var(--primary-color);
 }
 
