--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
 
 :root {
   --primary-color: #fb995d;
+  --primary-color-bright: #fa7727;
+  --white-color: #fff;
 }
 
 h1,
@@ -46,4 +48,26 @@ h1 {
 
 .text-primary {
   color: var(--primary-color);
+}
+
+span {
+  font-family: Chivo Mono;
+}
+
+.button-primary {
+  display: inline-block;
+  padding: 1rem 2rem;
+  background-color: var(--primary-color-bright);
+  color: #fff;
+  text-decoration: none;
+  margin-top: 2rem;
+  box-shadow: 2px 2px 5px #ddd;
+  transition: 0.2s ease-in;
+  border: none;
+  font-family: Chivo Mono;
+  font-size: 1rem;
+}
+
+.button-primary:hover {
+  background-color: #222;
 }
